--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,6 @@
     <div>Hi, welcome to the chat app</div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-       var socket = io();
-
-       socket.on('connect' ,() => {
-          console.log('connected to server');
-       });
-
-       socket.on('disconnect', () => {
-          console.log('Disconnected from server');
-       });
-    </script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
