--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
             <div class="chat__footer">
                     <form id="message-form" action="">
-                        <input name="message" type="text" placeholder="Message..." autofocus autocomplete="off"/>
+                        <input name="message" type="text" placeholder="Message..." autofocus autocomplete="off">
                         <button>Send</button>
                     </form>
             
@@ -30,10 +30,37 @@
             
     </div>
 
+    <!--START: TEMPLATES FOR CHAT MESSAGES-->
+    <script id="message-template" type="text/template">
+        <li class='message'>
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p class="message__text">{{text}}</p>
+            </div>
+        </li>
+    </script>
 
+    <script id="location-message-template" type="text/template">
+        <li class='message'>
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p>
+                    <a href="{{url}}" target="__blank">My current location</a>
+                </p>
+            </div>
+        </li>
+    </script>
+    <!--END: TEMPLATES FOR CHAT MESSAGES-->
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
