Clicking a room thats active will set it to room textbox value

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,7 @@
         <script id="room-list-template" type="text/template">
             <li class='room'>
                 <div class="room__title">
-                    <h4>Room: {{name}}</h4>
-                    
-                    <span>| Users: {{userCount}}</span>
+                    <h4 data-room="{{name}}">Room: {{name}} | Users: {{userCount}}</h4>
                 </div>
             </li>
         </script>
