--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="centered-form">
     <div class="centered-form__form">
-        <form action="/chat.html">
+        <form id='join-form' action="/chat.html">
             <div class="form-field">
                 <h3>Join a Chat</h3>
             </div>
