--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="centered-form">
