Added comment for later styling

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 
 
         <!--START: TEMPLATE FOR ROOM LISTS-->
+        <!--USE FLEXBOX TO STYLE THE ROOM LIST-->
         <script id="room-list-template" type="text/template">
             <li class='room'>
                 <div class="room__title">
