todo for react overhaul

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     </div>
 
 
+    <!--These templates should be replaced with react components-->
         <!--START: TEMPLATE FOR ROOM LISTS-->
         <!--USE FLEXBOX TO STYLE THE ROOM LIST-->
         <script id="room-list-template" type="text/template">
